Software/eclipse/.metadata/.plugins/org.eclipse.cdt.ui/DIYWordclock.build.log
15:56:44 **** Incremental Build of configuration Release for project DIYWordclock ****
make all 
Building file: ../main.c
Invoking: AVR Compiler
avr-gcc -Wall -Os -fpack-struct -fshort-enums -ffunction-sections -fdata-sections -std=gnu99 -funsigned-char -funsigned-bitfields -mmcu=atmega168pa -DF_CPU=16000UL -MMD -MP -MF"main.d" -MT"main.d" -c -o "main.o" "../main.c"
../main.c:9:6: warning: return type of 'main' is not 'int' [-Wmain]
 void main(void){
      ^
../main.c: In function 'main':
../main.c:11:2: error: 'wd' undeclared (first use in this function)
  wd
  ^
../main.c:11:2: note: each undeclared identifier is reported only once for each function it appears in
../main.c:16:2: error: expected ';' before 'while'
  while(1){}
  ^
make: *** [main.o] Error 1

15:56:44 Build Finished (took 186ms)

